sudah edit tampilan sampai hasil lelang

--- a/app/src/main/res/layout/activity_add_lelang.xml
+++ b/app/src/main/res/layout/activity_add_lelang.xml
@@ -5,78 +5,116 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="20dp"
+    android:paddingTop="10dp"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:orientation="vertical"
     tools:context=".activity.AddLelangActivity">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:text="UserId"/>
-        <TextView
-            android:id="@+id/txtTextuserId"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:hint="Enter id "
-            android:inputType="text"
-            android:layout_marginBottom="10dp"/>
-
+            <ImageView
+                android:id="@+id/btn_backtohome"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/ic_baseline_arrow_back_ios_24"/>
             <TextView
+                android:layout_width="240dp"
+                android:layout_height="100dp"
+                android:text="            Form
+                                    Pengajuan Lelang"
+                android:layout_gravity="center"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:layout_marginLeft="70dp"/>
+            <LinearLayout
+                android:id="@+id/lelang1"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="HewanId"/>
-        <Spinner
-            android:id="@+id/spinHewanId"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter id "
-            android:inputType="text"
-            android:layout_marginBottom="10dp"/>
+                android:layout_height="match_parent"
+                android:layout_marginTop="100dp"
+                android:padding="10dp"
+                android:orientation="vertical"
+                android:background="@drawable/homeasset_e">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="UserId :"
+                    android:textStyle="bold"
+                    android:textSize="20dp"
+                    android:textColor="#000000"/>
+                <TextView
+                    android:id="@+id/txtTextuserId"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:hint="Enter id "
+                    android:inputType="text"
+                    android:layout_marginBottom="20dp"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="Comment"/>
-        <EditText
-            android:id="@+id/editTextcomment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Enter comment "
-            android:inputType="text"
-            android:layout_marginBottom="10dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="HewanId :"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"/>
+                <Spinner
+                    android:id="@+id/spinHewanId"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter id "
+                    android:inputType="text"
+                    android:layout_marginBottom="20dp"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="Harga "/>
-            <EditText
-                android:id="@+id/editTextharga"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Enter harga "
-                android:inputType="text"
-                android:layout_marginBottom="10dp"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Tambahan Pelelang :"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"/>
+                <EditText
+                    android:id="@+id/editTextcomment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter comment "
+                    android:inputType="text"
+                    android:layout_marginBottom="20dp"/>
 
-        <Button
-            android:id="@+id/btn_addlelang"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Tambah Lelang" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Harga :"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"/>
+                <EditText
+                    android:id="@+id/editTextharga"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter harga "
+                    android:inputType="text"
+                    android:layout_marginBottom="30dp"/>
+            </LinearLayout>
 
             <Button
-                android:id="@+id/btn_backtohome"
+                android:id="@+id/btn_addlelang"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="kembali" />
-
-        </LinearLayout>
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:text="Tambah Lelang"
+                android:textStyle="bold"
+                android:layout_below="@id/lelang1"
+                android:background="@color/brownlight"
+                android:layout_marginTop="50dp"/>
+        </RelativeLayout>
     </ScrollView>
-
 </LinearLayout>
