--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,8 @@
     <color name="creamhome">#b7b1ae</color>
     <color name="brownhome">#754838</color>
     <color name="oldbrownhome">#584838</color>
+    <color name="orangelight">#ffdaad</color>
+
 
 
 </resources>
