--- a/app/src/main/res/drawable/homeasset_d.xml
+++ b/app/src/main/res/drawable/homeasset_d.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/brown"></solid>
+    <solid android:color="#f7635c"></solid>
 
     <corners android:radius="15dp"></corners>
 </shape>
