--- a/app/src/main/res/drawable/reqlelasset_a.xml
+++ b/app/src/main/res/drawable/reqlelasset_a.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/brown"></solid>
 
-    <corners android:radius="15dp"></corners>
+    <corners android:radius="35dp"
+        android:topLeftRadius="0dp"
+        android:topRightRadius="0dp"></corners>
 </shape>
