--- a/app/src/main/res/layout/activity_groupchat.xml
+++ b/app/src/main/res/layout/activity_groupchat.xml
@@ -45,26 +45,26 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true">
 
-        <EditText
-            android:id="@+id/input_edtxt"
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:hint="write text here..."
-            android:padding="17dp"/>
-
-        <ImageButton
-            android:id="@+id/send_imgbtn"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@mipmap/ic_launcher"/>
-
         <TextView
             android:id="@+id/timer_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="00:30"
-            android:textSize="20sp"/>
-
+            android:textSize="20sp"
+            android:layout_marginLeft="150dp"/>
     </LinearLayout>
 
 </RelativeLayout>
+
+    <!--        <EditText-->
+    <!--            android:id="@+id/input_edtxt"-->
+    <!--            android:layout_width="250dp"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:hint="write text here..."-->
+    <!--            android:padding="17dp"/>-->
+
+    <!--        <ImageButton-->
+    <!--            android:id="@+id/send_imgbtn"-->
+    <!--            android:layout_width="50dp"-->
+    <!--            android:layout_height="50dp"-->
+    <!--            android:src="@mipmap/ic_launcher"/>-->
