--- a/app/src/main/res/layout/activity_list_lelang_ayam.xml
+++ b/app/src/main/res/layout/activity_list_lelang_ayam.xml
@@ -1,23 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/creamhome"
     android:orientation="vertical"
     tools:context=".activity.ListLelangayamActivity">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:background="@drawable/reqlelasset_a"/>
+
+    <ImageView
+        android:id="@+id/btn_backreqlist"
+        android:layout_width="25dp"
+        android:layout_height="35dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginTop="23dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_round_arrow_forwardwhite_ios_24"/>
+
+    <ImageView
+        android:id="@+id/btn_pengajuanlel"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/ic_outline_add_boxwhite_24"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Lelang  Ayam"
+        android:layout_gravity="center"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"
+        android:layout_toLeftOf="@id/btn_backreqlist"
+        android:layout_marginTop="25dp"
+        android:layout_marginRight="60dp"/>
 
     <TextView
         android:id="@+id/lelayam_filterkey"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:textColor="@color/white"/>
+        android:textColor="@color/brown"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lelangayamRV"
+        android:layout_marginTop="130dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </androidx.recyclerview.widget.RecyclerView>
 
-</LinearLayout>
+</RelativeLayout>
