--- a/app/src/main/res/layout/lelbyhewanayam_layout.xml
+++ b/app/src/main/res/layout/lelbyhewanayam_layout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="150dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="5dp"
-    android:layout_marginBottom="10dp">
+    android:layout_marginBottom="10dp"
+    app:cardCornerRadius="25dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -19,19 +20,18 @@
             android:layout_marginLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Harga Awal:"
+            android:text="Harga Awal :"
             android:textColor="#000000"
-            android:textSize="18dp"/>
+            android:textStyle="bold"
+            android:textSize="20dp"/>
         <TextView
             android:id="@+id/hargaayam"
-            android:layout_marginTop="18dp"
-            android:layout_marginLeft="120dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="130dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Harga Awal"
-            android:textStyle="bold"
-            android:textColor="#000000"
-            android:textSize="22dp"/>
+            android:textSize="18dp"/>
         <TextView
             android:layout_marginTop="70dp"
             android:layout_marginLeft="110dp"
@@ -39,6 +39,7 @@
             android:layout_height="wrap_content"
             android:text="Tambahan Pelelang"
             android:textColor="#000000"
+            android:textStyle="bold"
             android:textSize="10dp"/>
         <TextView
             android:id="@+id/commentayam"
@@ -47,9 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Tambahan Pelelang"
-            android:textColor="#000000"
-            android:textSize="12dp"
-            android:textStyle="bold"/>
+            android:textSize="12dp"/>
         <TextView
             android:id="@+id/idayam"
             android:layout_width="50dp"
@@ -58,23 +57,21 @@
             android:layout_marginRight="10dp"
             android:layout_alignParentRight="true"
             android:text="1"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textStyle="bold"
             android:textSize="25sp"
             android:textAlignment="center"
-            android:background="@drawable/lelayamasset_a"
+            android:background="@drawable/signasset_d"
             android:gravity="center_horizontal|center_vertical" />
-        <Button
+        <ImageView
             android:id="@+id/btn_detailayam"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="Detail"
-            android:textAllCaps="false"
-            android:textColor="#000000"
-            android:backgroundTint="@color/creamhome"
-            android:layout_marginTop="90dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/ic_baseline_more_brown_24"
+            android:layout_marginLeft="300dp"
+            android:layout_marginTop="100dp"/>
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
