--- a/app/src/main/res/layout/reqlelitem_layout.xml
+++ b/app/src/main/res/layout/reqlelitem_layout.xml
@@ -1,36 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:padding="5dp">
+    android:layout_height="160dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="5dp"
+    app:cardCornerRadius="25dp">
 
     <LinearLayout
-        android:padding="20dp"
+        android:padding="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
-
         <TextView
             android:id="@+id/reqlel_lelid"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="5dp"/>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nama Pelelang"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:layout_marginBottom="5dp"/>
         <TextView
             android:id="@+id/reqlel_pelelangid"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Calon Peserta"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:layout_marginBottom="5dp"/>
 
         <TextView
             android:id="@+id/reqlel_pengirimid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <Button
+        <ImageView
             android:id="@+id/btndetreqlel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="detail"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/ic_baseline_more_brown_24"
             android:layout_gravity="end"/>
     </LinearLayout>
 
