sudah bisa upload dan retrieve image

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -96,7 +96,7 @@
                 <LinearLayout
                     android:layout_width="200dp"
                     android:layout_height="5dp"
-                    android:background="#000000"
+                    android:background="@drawable/homeasset_g"
                     android:layout_below="@id/hometxt_1"
                     android:layout_centerHorizontal="true"/>
 
@@ -175,6 +175,13 @@
                         android:layout_marginTop="10dp"
                         android:layout_below="@id/btn_towallet"
                         android:text="Requset Lelang"/>
+                    <Button
+                        android:id="@+id/btn_toimgtry"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:layout_below="@id/btn_toreqlel"
+                        android:text="Image List"/>
                 </RelativeLayout>
             </RelativeLayout>
 
