--- a/app/src/main/res/layout/activity_detail_reqlel.xml
+++ b/app/src/main/res/layout/activity_detail_reqlel.xml
@@ -5,8 +5,176 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp"
+    android:background="@color/brownlight"
     tools:context=".activity.DetailReqlelActivity">
+    
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/txt_title1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Detail Calon Peserta"
+                android:textStyle="bold"
+                android:textColor="#000000"
+                android:textSize="25dp"
+                android:layout_marginTop="25dp"
+                android:layout_centerHorizontal="true"/>
+
+            <RelativeLayout
+                android:id="@+id/detreqrl_one"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_below="@+id/txt_title1"
+                android:layout_marginTop="80dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/signasset_c">
+                <TextView
+                    android:id="@+id/txt_reqlelpengirim"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Agus Prayono"
+                    android:textSize="25dp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"/>
+                <Button
+                    android:id="@+id/btn_reqlelaccept"
+                    android:layout_width="150dp"
+                    android:layout_height="40dp"
+                    android:text="Terima"
+                    android:textColor="#FFFFFF"
+                    android:background="@drawable/reqlelasset_c"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_margin="5dp"/>
+                <Button
+                    android:id="@+id/btn_reqlelreject"
+                    android:layout_width="150dp"
+                    android:layout_height="40dp"
+                    android:text="Tolak"
+                    android:textColor="#ffffff"
+                    android:background="@drawable/reqlelasset_b"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_margin="5dp"/>
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/reqlel_txt1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mendaftar Pada Lelang"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_below="@id/detreqrl_one"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="60dp"/>
+            <RelativeLayout
+                android:layout_width="280dp"
+                android:layout_height="5dp"
+                android:background="@drawable/homeasset_g"
+                android:layout_below="@id/reqlel_txt1"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dp"/>
+
+            <RelativeLayout
+                android:id="@+id/imageFrame"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@drawable/signasset_c"
+                android:layout_marginTop="90dp"
+                android:layout_centerHorizontal="true">
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:background="@drawable/usericon"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_below="@id/reqlel_txt1"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="20dp"
+                android:padding="10dp"
+                android:background="@drawable/signasset_c">
+                <TextView
+                    android:id="@+id/tmp_reqlel_idlelang"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:background="@drawable/signasset_d"
+                    android:layout_centerVertical="true"
+                    android:text="1"
+                    android:textColor="#FFFFFF"
+                    android:textStyle="bold"
+                    android:textSize="25sp"
+                   android:gravity="center"/>
+                <TextView
+                    android:id="@+id/reqlel_txt2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/tmp_reqlel_idlelang"
+                    android:layout_below="@id/reqlel_txt3"
+                    android:layout_marginLeft="10dp"
+                    android:text="Harga Awal :"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:textSize="15sp"/>
+                <TextView
+                    android:id="@+id/reqlel_hargalelang"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="500000"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    android:layout_below="@id/reqlel_txt3"
+                    android:layout_toRightOf="@id/reqlel_txt2"
+                    android:layout_marginLeft="10dp"/>
+
+                <TextView
+                    android:id="@+id/reqlel_txt3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/tmp_reqlel_idlelang"
+                    android:text="Sapi"
+                    android:textSize="30dp"
+                    android:layout_marginLeft="25dp"
+                    android:layout_marginTop="8dp"
+                    android:textColor="#000000"
+                    android:textStyle="bold"/>
+                <ImageView
+                    android:id="@+id/reqlel_todetlel"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:background="@drawable/ic_baseline_more_brown_24"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"/>
+            </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/btn_backdetreqlist"
+                android:layout_width="25dp"
+                android:layout_height="35dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="23dp"
+                android:src="@drawable/ic_baseline_arrow_back_ios_24"/>
+
+
+        </RelativeLayout>
+    </ScrollView>
 
     <TextView
         android:layout_width="match_parent"
@@ -20,42 +188,10 @@
         android:layout_marginBottom="15dp"/>
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pelelang"/>
-
-    <TextView
         android:id="@+id/txt_reqleluser"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pendaftar"/>
-
-    <TextView
-        android:id="@+id/txt_reqlelpengirim"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"/>
-
-    <Button
-        android:id="@+id/btn_reqlelaccept"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Terima"
-        android:layout_marginTop="50dp" />
-
-    <Button
-        android:id="@+id/btn_reqlelreject"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tolak"
-        android:textColor="#ffffff"
-        android:backgroundTint="@color/red"
-        android:layout_marginTop="10dp" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -65,15 +201,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:hint="sd"/>
-
         <TextView
             android:id="@+id/tmp_reqlel_iduser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/tmp_reqlelid"
             android:hint="ad"/>
-
         <TextView
             android:id="@+id/tmp_reqlel_idpendaftar"
             android:layout_width="wrap_content"
@@ -81,13 +214,10 @@
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/tmp_reqlel_iduser"
             android:hint="as"/>
-
         <TextView
-            android:id="@+id/tmp_reqlel_idlelang"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/tmp_reqlel_idpendaftar"
             android:hint="ds"/>
 
     </RelativeLayout>
