--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -6,70 +6,232 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingTop="20dp"
+    android:background="@color/brown"
     tools:context=".activity.WalletActivity">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
+        android:layout_height="wrap_content">
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
-    <TextView
-        android:layout_width="match_parent"
-        android:text="IdUser"
-        android:textSize="25sp"
-        android:layout_height="35dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="50dp"/>
 
-    <TextView
+            <RelativeLayout
+                android:id="@+id/rellaySaldo"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginTop="150dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/homeasset_f">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:text="Saldo awal anda :"
+                    android:textSize="15sp"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="50dp"/>
+
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:layout_marginTop="180dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/homeasset_e">
+                <TextView
+                    android:id="@+id/txt_saldoawal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="5000000"
+                    android:textSize="30sp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center_horizontal" />
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pilihan Topup"
+                android:textColor="#FFFFFF"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:layout_marginTop="60dp"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/rellaySaldo"/>
+            <RelativeLayout
+                android:id="@+id/garis_topup"
+                android:layout_width="match_parent"
+                android:layout_height="5dp"
+                android:layout_marginTop="90dp"
+                android:layout_marginLeft="40dp"
+                android:layout_marginRight="40dp"
+                android:background="@drawable/homeasset_f"
+                android:layout_below="@id/rellaySaldo"/>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/brown"
+                android:layout_below="@id/garis_topup">
+                <Button
+                    android:id="@+id/btntmbh_a"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="48dp"
+                    android:layout_marginTop="50dp"
+                    android:background="@drawable/homeasset_e"
+                    android:text="500.000"
+                    android:textStyle="bold"/>
+                <Button
+                    android:id="@+id/btntmbh_b"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_toRightOf="@id/btntmbh_a"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="50dp"
+                    android:background="@drawable/homeasset_e"
+                    android:text="1.000.000"
+                    android:textStyle="bold"/>
+                <Button
+                    android:id="@+id/btntmbh_c"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="50dp"
+                    android:layout_toRightOf="@id/btntmbh_b"
+                    android:background="@drawable/homeasset_e"
+                    android:text="1.500.000"
+                    android:textStyle="bold"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rellaysalTambahan"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginTop="550dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/homeasset_f">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:text="Akan ditambah sejumlah :"
+                    android:textSize="15sp"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="50dp"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="130dp"
+                android:layout_marginTop="580dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/homeasset_e">
+                <EditText
+                    android:id="@+id/edtxt_saldotambah"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="30sp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center_horizontal"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/iconbtn_a"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginLeft="70dp"
+                android:background="@drawable/signasset_c"
+                android:layout_below="@id/garis_topup">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_topup_24"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/iconbtn_b"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginLeft="55dp"
+                android:background="@drawable/signasset_c"
+                android:layout_below="@id/garis_topup"
+                android:layout_toRightOf="@id/iconbtn_a">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_topup_24"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/iconbtn_c"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginLeft="55dp"
+                android:background="@drawable/signasset_c"
+                android:layout_below="@id/garis_topup"
+                android:layout_toRightOf="@id/iconbtn_b">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_topup_24"
+                    android:layout_centerVertical="true"
+                    android:layout_centerHorizontal="true"/>
+            </RelativeLayout>
+
+            <TextView
         android:id="@+id/txt_userid"
-        android:background="@color/colorAccent"
+        android:textColor="@color/brown"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="20dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:text="Saldo awal"
-        android:textSize="25sp"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="50dp"/>
-
-    <TextView
-        android:id="@+id/txt_saldoawal"
-        android:background="@color/colorAccent"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="20dp"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:text="Saldo tambah"
-        android:textSize="25sp"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="50dp"/>
-
-    <EditText
-        android:id="@+id/edtxt_saldotambah"
-        android:background="@color/colorAccent"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_margin="20dp"/>
-
-    <Button
+        android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TopUp Saldo"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:textColor="#FFFFFF"
+                android:layout_marginTop="30dp"
+                android:layout_centerHorizontal="true"/>
+            <Button
         android:id="@+id/btn_tambahsaldo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
+        android:layout_below="@+id/rellaysalTambahan"
+        android:background="@drawable/homeasset_e"
         android:text="Tambah"/>
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/btn_backtohome"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="20dp"
+                android:src="@drawable/ic_baseline_arrowwhite_24"/>
+        </RelativeLayout>
     </ScrollView>
 
 </LinearLayout>
