--- a/app/src/main/res/layout/activity_image_upload.xml
+++ b/app/src/main/res/layout/activity_image_upload.xml
@@ -12,11 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="400dp"/>
 
+    <TextView
+        android:id="@+id/imageUri"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:layout_below="@id/imagedisplay"/>
+
     <Button
-        android:id="@+id/btn_captureImage"
+        android:id="@+id/btn_imgupload"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Capture Image"
+        android:text="Upload Image"
         android:layout_marginTop="20dp"
         android:layout_below="@id/imagedisplay"/>
 
@@ -24,8 +31,8 @@
         android:id="@+id/btn_pickgallery"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="From gallery"
-        android:layout_below="@id/btn_captureImage"
+        android:text="From Device"
+        android:layout_below="@id/btn_imgupload"
         android:layout_marginTop="20dp"/>
 
 </RelativeLayout>
